--- a/arch/arm64/configs/chiron_defconfig
+++ b/arch/arm64/configs/chiron_defconfig
@@ -60,7 +60,10 @@ CONFIG_PREEMPT=y
 CONFIG_HZ_300=y
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
 CONFIG_CMA=y
+# CONFIG_Z3FOLD is not set
 CONFIG_ZSMALLOC=y
+CONFIG_PGTABLE_MAPPING=y
+# CONFIG_ZSMALLOC_STAT is not set
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_VM_MAX_READAHEAD=2048
 CONFIG_SECCOMP=y
@@ -255,6 +258,10 @@ CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_DMA_CMA=y
 # CONFIG_PNP_DEBUG_MESSAGES is not set
 CONFIG_ZRAM=y
+CONFIG_ZPOOL=y
+# CONFIG_ZRAM_DEFAULT_Z3FOLD is not set
+CONFIG_ZRAM_DEFAULT_ZSMALLOC=y
+CONFIG_ZRAM_DEFAULT_POOL="zsmalloc"
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
